# kiki-slm

./: .gitignore  CLAUDE.md  Dockerfile  Makefile  docker-compose.yaml  kiki_slm_implementation_plan.md  pyproject.toml
configs/: base.yaml  colab_config.yaml  loopper_pipeline.yaml  poc_config.yaml
configs/alignment/: dpo.yaml  grpo.yaml  kto.yaml  simpo.yaml
configs/evaluation/: eval_suite.yaml
configs/serving/: mlx_local.yaml  vllm_multi_lora.yaml
configs/sft/: intent_classifier.yaml  response_generator.yaml  (+2 more)
docs/: kiki-slm-architecture-guide.md  kiki-slm-training-strategy.md  known-issues.md  lora-qlora-deep-dive.md  organic-dataset-creation-guide.md  qlora-training-deep-dive.md  strategy-95-percent-accuracy.md  v2-dataset-construction-guide.md  v2-training-strategy.md
findings/: 00_summary.md  01_dataset_sizing.md  02_quality_vs_quantity.md  03_dataset_mixing.md  04_epochs_and_overfitting.md  05_data_filtering_and_curation.md  06_tool_calling_and_structured_output.md  07_curriculum_learning.md  08_qwen3_specific.md
notebooks/: kiki_data_curation.ipynb  kiki_sft_finetune.ipynb
prompts/: annotator_system.txt
scripts/: 1_annotate.py  2_train.py  3_evaluate.py  4_demo.py  analyze_raw_tickets.py  audit_gold.py  build_eval_report.py  colab_eval.py  colab_train.py  deploy_hf_endpoint.py  download_datasets.py  enrich_workflows.py  export_gguf.py  merge_and_export.py  modal_deploy.py  prepare_data.py  prepare_sft_chatml.py  prepare_sft_curated.py  push_to_hf_hub.py  serve.py  test_kiki_local.py  train_alignment.py  train_sft.py  trim_chatml.py
(+75 files in other folders)
