[project]
name = "kiki-slm"
version = "0.1.0"
description = "Kiki SLM - AI Service Operations Platform with fine-tuned Small Language Model"
requires-python = ">=3.11"
dependencies = [
    # Core ML
    "torch>=2.1",
    "transformers>=4.45",
    "datasets>=3.0",
    "accelerate>=1.0",
    "peft>=0.13",
    "trl>=0.12",
    # Data validation
    "pydantic>=2.0",
    # Config
    "omegaconf>=2.3",
    "pyyaml>=6.0",
    # Data processing
    "presidio-analyzer>=2.2",
    "presidio-anonymizer>=2.2",
    "spacy>=3.7",
    "faker>=30.0",
    "sentence-transformers>=3.0",
    # API clients
    "openai>=1.40.0",
    "anthropic>=0.34.0",
    # Evaluation
    "scikit-learn>=1.3",
    "python-Levenshtein>=0.25",
    # Experiment tracking
    "wandb>=0.18",
    # Utilities
    "tqdm>=4.66",
    "pandas>=2.0",
    "numpy",
    "tenacity>=8.2",
    # Language detection (used in scripts/loopper/sample_tickets.py)
    "langdetect>=1.0.9",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.24",
    "ruff>=0.8",
]
gpu = [
    "unsloth",
    "bitsandbytes>=0.44",
    "vllm>=0.6.0",
]
apple = [
    "mlx-lm>=0.18",
]
demo = [
    "gradio>=4.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/kiki"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]

[tool.ruff]
line-length = 120
target-version = "py311"
